Update RTL layout

--- a/demo/default.html
+++ b/demo/default.html
@@ -49,31 +49,7 @@
     </style>
 </head>
 <body>
-    <script src="/lib/index.js"></script>
-
-    <!-- Slider main container -->
-    <div class="swiper-container" id="swiper1">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="a swiper-slide">1</div>
-            <div class="b swiper-slide">2</div>
-            <div class="a swiper-slide">3</div>
-            <div class="b swiper-slide">4</div>
-        </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-    </div>
-
-    <script>
-        var mySwiper = new Swiper('#swiper1', {
-            speed: 300,
-            cssMode: true,
-            direction: 'vertical',
-            spaceBetween: 100,
-            mousewheel: true
-        });
-    </script>
+    <script src="../lib/index.min.js"></script>
 
     <!-- Slider main container -->
     <div class="swiper-container" id="swiper2">
@@ -95,11 +71,12 @@
             cssMode: true,
             direction: 'horizontal',
             spaceBetween: 100,
-            mousewheel: true
+            // mousewheel: true
         });
     </script>
 
-    <div class="c"></div>
+    
+    
 
 </body>
 
